force-app/main/default/objects/Email_Receiver__c/Email_Receiver__c.object-meta.xml
<CustomObject>
    <description>The Email Receiver object is required to store information about the recipient of emails. It will be used to check whether an invitation to this Survey has already been sent to a specific email.</description>
    <label>Email Receiver</label>
    <nameField>
        <displayFormat>ER-{00000}</displayFormat>
        <label>Email Receiver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Receivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>