force-app/main/default/objects/Email_Receiver__c/fields/IsSend__c.field-meta.xml
<CustomField>
    <fullName>IsSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSend</label>
    <type>Checkbox</type>
</CustomField>