force-app/main/default/objects/Email_Receiver__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Email Receivers</relationshipLabel>
    <relationshipName>Email_Receivers_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>