force-app/main/default/objects/Email_Receiver__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <description>URL for survey</description>
    <label>Survey URL</label>
    <type>Url</type>
</CustomField>