force-app/main/default/objects/Email_Receiver__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The name of the group of users who will receive the email or the single email.</description>
    <label>Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>